# obsidian-semantic-mcp

./: .env.example  .gitignore  README.md  config.py  embedder.py  index.py  pyproject.toml  server.py  tracker.py  watcher.py
ingestion/: __init__.py  audio.py  canvas.py  image.py  markdown.py  pdf.py  video.py
tests/: test_index.py  test_lexical_search.py  test_rate_limiter.py
