[project]
name = "obsidian-semantic-mcp"
version = "0.1.0"
description = "Semantic search MCP server for Obsidian vaults with multi-file type support"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "chromadb>=0.5",
    "google-genai>=1.0",
    "pdfplumber>=0.11",
    "python-frontmatter>=1.1",
    "watchdog>=4.0",
    "pillow>=10.0",
    "pydub>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
